Closed Bug 750018 Opened 12 years ago Closed 12 years ago

Missing format strings

Categories

(NSS :: Tools, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: glandium, Unassigned)

Details

Attachments

(1 file)

Somehow similar to bug 521679, there are a few printfs called without a format string, that is, it just uses a buffer it is passed as the format string. If one of these buffers contain %something, it will start having interesting behavior. Arguably, this is only in tools, but it also silences gcc when building with some hardening options.
Comment on attachment 619360 [details] [diff] [review]
Add %s format strings to many {,f}printf calls

r=kaie
Thank you for the patch
Attachment #619360 - Flags: review?(kaie) → review+
Checking in certcgi/certcgi.c;
/cvsroot/mozilla/security/nss/cmd/certcgi/certcgi.c,v  <--  certcgi.c
new revision: 1.21; previous revision: 1.20
done
Checking in digest/digest.c;
/cvsroot/mozilla/security/nss/cmd/digest/digest.c,v  <--  digest.c
new revision: 1.7; previous revision: 1.6
done
Checking in signver/pk7print.c;
/cvsroot/mozilla/security/nss/cmd/signver/pk7print.c,v  <--  pk7print.c
new revision: 1.12; previous revision: 1.11
done
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → 3.14
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: