Bug 750018 - Missing format strings, patch by Mike Hommey, r=kaie